tinyc/test/bad/enum-assignment-local.c
int main()
{
    enum {
        x = 20,
    };

    x = 30;

    return 0;
}
